[gd_scene load_steps=42 format=2]

[ext_resource path="res://Art/Bosses/Stone Golem/Character_sheet.png" type="Texture" id=1]
[ext_resource path="res://Art/Bosses/Stone Golem/Laser_sheet.png" type="Texture" id=2]
[ext_resource path="res://prefabs/Fonts/PixelRPG.tres" type="DynamicFont" id=3]
[ext_resource path="res://prefabs/Collision/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/Collision/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefabs/Collision/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefabs/Collision/PlayerDetection.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Bosses/state.gd" type="Script" id=8]
[ext_resource path="res://prefabs/Bosses/FiniteStateMachine.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Bosses/Idle.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Bosses/Follow.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Bosses/StoneGolem.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Bosses/MeleeAttack.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Bosses/HomingMissile.gd" type="Script" id=14]
[ext_resource path="res://prefabs/Bosses/BossesUtils/Missile.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scripts/Bosses/Dash.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Bosses/LaserBeam.gd" type="Script" id=17]
[ext_resource path="res://Scripts/Bosses/ArmorBuff.gd" type="Script" id=18]
[ext_resource path="res://Art/Shadows/LargeShadow.png" type="Texture" id=19]
[ext_resource path="res://Art/Bosses/Stone Golem/Forcefield.png" type="Texture" id=20]
[ext_resource path="res://Scripts/Bosses/ForceField.gd" type="Script" id=21]

[sub_resource type="Animation" id=1]
resource_name = "ArmorBuff"
length = 1.25
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63, 64, 65, 66, 67, 68, 69 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../FiniteStateMachine/ArmorBuff")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_ended"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Block"
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../ForceField:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 1.75
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../ForceField:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "ForceField"
loop = true
step = 0.03125
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625, 0.625, 0.6875, 0.75, 0.8125, 0.875, 0.9375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../ForceField:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5625, 0.625, 0.6875, 0.71875, 0.75, 0.78125, 0.8125, 0.84375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../ForceFieldHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.71875, 0.78125 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../FiniteStateMachine/ForceField")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_ended"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Glowing"
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../ForceField:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.666667
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../ForceField:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Laser"
length = 1.875
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../../FiniteStateMachine/LaserBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.875, 1.875 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_target"
}, {
"args": [  ],
"method": "anim_laser_ended"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.125, 1.875 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "LaserCast"
length = 0.875
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54, 55, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../FiniteStateMachine/LaserBeam")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_laserCast_ended"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../ForceField:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "MeleeAttack"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 45, 44, 43, 42, 41, 40 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../FiniteStateMachine/MeleeAttack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_ended"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "aim_attack"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../../HitboxPivot/Hitbox")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_triggerInvincibility"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../../ForceField:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitbox/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../ForceField:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../ForceFieldHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "RangedAttack"
length = 0.5625
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../FiniteStateMachine/HomingMissile")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5625 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_ended"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../ForceField:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "TripleAttack"
length = 1.625
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.4375, 0.5, 0.5625, 0.625, 0.6875, 0.75, 0.8125, 0.875, 0.9375, 1, 1.1875, 1.3125, 1.4375, 1.5, 1.5625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 44, 45, 46, 44, 45, 46, 45, 44, 43, 42, 41, 40 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5625, 0.625, 0.75, 0.8125, 0.9375, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4375 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "aim_attack"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../FiniteStateMachine/MeleeAttack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.625 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_ended"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../../HitboxPivot/Hitbox")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4375, 0.875 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_triggerInvincibility"
}, {
"args": [ true ],
"method": "set_triggerInvincibility"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../ForceField:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 129, 9.5 )

[sub_resource type="CircleShape2D" id=11]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=18]

[sub_resource type="CapsuleShape2D" id=13]
radius = 7.0
height = 16.0

[sub_resource type="CircleShape2D" id=14]
radius = 6.08276

[sub_resource type="CircleShape2D" id=15]
radius = 128.0

[sub_resource type="CapsuleShape2D" id=16]
height = 21.9999

[sub_resource type="CircleShape2D" id=20]
radius = 42.0

[node name="StoneGolem" type="KinematicBody2D"]
script = ExtResource( 12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -20 )
texture = ExtResource( 1 )
hframes = 10
vframes = 10
frame = 1

[node name="ForceField" type="Sprite" parent="."]
position = Vector2( 1, -21 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 20 )
hframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Pivot/Sprite")
autoplay = "Idle"
anims/ArmorBuff = SubResource( 1 )
anims/Block = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/ForceField = SubResource( 21 )
anims/Glowing = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Laser = SubResource( 6 )
anims/LaserCast = SubResource( 7 )
anims/MeleeAttack = SubResource( 8 )
anims/RESET = SubResource( 9 )
anims/RangedAttack = SubResource( 10 )
anims/TripleAttack = SubResource( 19 )

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 2, -37 )

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( 98, 18 )
texture = ExtResource( 2 )
vframes = 15
frame = 1

[node name="Hitbox" parent="Pivot/Sprite" instance=ExtResource( 5 )]
position = Vector2( -98, -17 )
collision_mask = 4
knockbackForce = 50.0
knockbackSpeed = 60.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Pivot/Sprite/Hitbox"]
position = Vector2( 119, 0.5 )
shape = SubResource( 17 )
disabled = true

[node name="Debug" type="Label" parent="."]
margin_left = -20.0
margin_top = -57.0
margin_right = 21.0
margin_bottom = -43.0
custom_fonts/font = ExtResource( 3 )
text = "Debug"
align = 1
valign = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 11 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -20 )
shape = SubResource( 18 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -3 )
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -16 )
shape = SubResource( 13 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SoftCollision"]
position = Vector2( 0, -8 )
shape = SubResource( 14 )

[node name="PlayerDetection" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 15 )

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 10 )

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 11 )
distanceToShoot = 100.0

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 13 )

[node name="HomingMissile" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 14 )
bullet_node = ExtResource( 15 )

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 17 )

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 18 )

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 16 )

[node name="Timer" type="Timer" parent="FiniteStateMachine/Dash"]

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 8 )

[node name="ForceField" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource( 21 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -16 )
rotation = 3.14159

[node name="Hitbox" parent="HitboxPivot" instance=ExtResource( 5 )]
position = Vector2( -22, -5.53131e-05 )
collision_mask = 4
knockbackForce = 25.0
knockbackSpeed = 30.0

[node name="CollisionShape2D" parent="HitboxPivot/Hitbox" index="0"]
position = Vector2( -1.90735e-06, -2.99994 )
shape = SubResource( 16 )
disabled = true

[node name="ForceFieldHitbox" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -20 )
collision_mask = 4
damage = 15.0
knockbackForce = 250.0
knockbackSpeed = 300.0

[node name="CollisionShape2D" parent="ForceFieldHitbox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 20 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_PlayerDetection_body_entered"]
[connection signal="timeout" from="FiniteStateMachine/Dash/Timer" to="FiniteStateMachine/Dash" method="_on_Timer_timeout"]

[editable path="Hurtbox"]
[editable path="HitboxPivot/Hitbox"]
[editable path="ForceFieldHitbox"]
